--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<html>
-<head>
-<title>Teste</title>
-</head>
-<body>
-<h1>Teste 1234</h1>
-</body>
-</html>
+<div class="">
+<p class="text-gray">Teste 1234</p>
+</div>
